Add new get endpont for return the sent messages
